infra/k8s/keystone-backend.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keystone-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keystone-backend
  template:
    metadata:
      labels:
        app: keystone-backend
    spec:
      containers:
        - name: keystone-backend
          image: herve010/keystone-build:0.0.7
---
apiVersion: v1
kind: Service
metadata:
  name: keystone-backend-srv
spec:
  selector:
    app: keystone-backend
  ports:
    - name: keystone-backend
      protocol: TCP
      port: 3000
      targetPort: 3000
