infra/k8s/node-backend.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend
  template:
    metadata:
      labels:
        app: node-backend
    spec:
      containers:
        - name: frontend
          image: herve010/node_import:0.0.3
---
apiVersion: v1
kind: Service
metadata:
  name: node-backend-srv
spec:
  selector:
    app: node-backend
  ports:
    - name: node-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
