infra/k8s/postgres.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
