infra/k8s/redis.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine3.20
          command:
           - redis-server
          args:
            - --requirepass
            - paUIw93SSw0
---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: redis
  type: NodePort
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
