infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: import-keystone.digitalrisedorset.co.uk
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-backend-srv
                port:
                  number: 3000
    - host: import-any-source.digitalrisedorset.co.uk
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-frontend-srv
                port:
                  number: 3001
    - host: import-node.digitalrisedorset.co.uk
      http:
        paths:
          - path: /woocommerce/attributeList
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
          - path: /woocommerce/productList
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
          - path: /woocommerce/createImport
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
          - path: /woocommerce/createUpdate
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
          - path: /woocommerce/notifyProductDeletion
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
          - path: /csv_import
            pathType: Prefix
            backend:
              service:
                name: node-backend-srv
                port:
                  number: 8080
